# prueba_tecnica_backend_aula_matriz

./: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
server/: settings.py  urls.py
usuarios/: views.py
usuarios/Urls/: urls.py
usuarios/templates/usuarios/: Login.html
